--- a/options.conf
+++ b/options.conf
@@ -1,3 +1,8 @@
+[package]
+name = gtk-doc
+url = https://download.gnome.org/sources/gtk-doc/1.26/gtk-doc-1.26.tar.xz
+archives = 
+
 [autospec]
 # build 32 bit libraries
 32bit = false
