gtk-doc: Autospec creation for version 1.26

--- a/options.conf
+++ b/options.conf
@@ -2,6 +2,7 @@
 name = gtk-doc
 url = https://download.gnome.org/sources/gtk-doc/1.26/gtk-doc-1.26.tar.xz
 archives = 
+giturl = 
 
 [autospec]
 # build 32 bit libraries
@@ -10,6 +11,8 @@ archives =
 allow_test_failures = true
 # unset %build ld_as_needed variable
 asneeded = false
+# this package is trusted enough to automatically update (used by other tools)
+autoupdate = false
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
