--- a/options.conf
+++ b/options.conf
@@ -1,8 +1,8 @@
 [package]
 name = gtk-doc
-url = https://download.gnome.org/sources/gtk-doc/1.26/gtk-doc-1.26.tar.xz
+url = https://download.gnome.org/sources/gtk-doc/1.27/gtk-doc-1.27.tar.xz
 archives = 
-giturl = 
+giturl = https://github.com/GNOME/gtk-doc.git
 
 [autospec]
 # build 32 bit libraries
