--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = gtk-doc
-url = https://download.gnome.org/sources/gtk-doc/1.27/gtk-doc-1.27.tar.xz
+url = https://download.gnome.org/sources/gtk-doc/1.28/gtk-doc-1.28.tar.xz
 archives = 
 giturl = https://github.com/GNOME/gtk-doc.git
 
@@ -17,6 +17,8 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# this package is a library compatability package and only ships versioned library files
+compat = false
 # set conservative build flags
 conservative_flags = false
 # pass -ffast-math to compiler
