--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = gtk-doc
-url = https://download.gnome.org/sources/gtk-doc/1.30/gtk-doc-1.30.tar.xz
+url = https://download.gnome.org/sources/gtk-doc/1.32/gtk-doc-1.32.tar.xz
 archives = 
 giturl = https://github.com/GNOME/gtk-doc.git
 
@@ -33,6 +33,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not generate debuginfo for this package
+nodebug = false
 # disable stripping binaries
 nostrip = false
 # optimize build for size over speed
