--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = gtk-doc
-url = https://download.gnome.org/sources/gtk-doc/1.32/gtk-doc-1.32.tar.xz
+url = https://download.gnome.org/sources/gtk-doc/1.33/gtk-doc-1.33.1.tar.xz
 archives = 
 giturl = https://gitlab.gnome.org/GNOME/gtk-doc
 domain = 
@@ -14,7 +14,7 @@ allow_test_failures = true
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
-autoupdate = false
+autoupdate = true
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
